--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@
 		$('.whatNext').hide('fast');
 		$( "#answerBox" ).popup( "open" );
 		$('#answer').empty().append('<p><b>Veuillez patienter pendant que nous traitons votre demande aupr&egrave;s du chauffeur ...<button type="button" class="cancel ui-btn ui-btn-b ui-shadow ui-corner-all ui-btn-icon-left ui-icon-delete" id="cancel" onClick="stopCall()" value=""> Retour / Annulation </button></b></p>');
-		$.post("https://www.mytaxiserver.com/appserver/open_diary_app_share.php", url, function(data) {
+		$.post("http://www.mytaxiserver.com/appserver/open_diary_app_share.php", url, function(data) {
 			hail_id = data.hail_id;
 			//taxi_phone_number = data.taxi_phone_number;
 		}, "json").done(function() { setTimeout('check_answer()', 1000); }).fail(function() { alert('Erreur !') });
