Same... data-overlay theme less & stopCall Refresh app

--- a/index.html
+++ b/index.html
@@ -1298,9 +1298,9 @@
 		$('#map').gmap('destroy');
 		$( "#backPop" ).popup( "open" );
 		var wait2getBack = setTimeout( function () {
-			//document.location.href='index.html';
-			$.mobile.pageContainer.pagecontainer("change", "#infos", { transition: "slide"} );
-		}, 1000);
+			document.location.href='index.html';
+			//$.mobile.pageContainer.pagecontainer("change", "#infos", { transition: "slide"} );
+		}, 2000);
 	}
     function goback(flag)
     {
@@ -1490,7 +1490,7 @@
     </div>
     <div data-role="page" data-theme="c" id="map_page"">
         <div class="ui-content" role="main" id="map">
-			<div data-role="popup" data-theme="c" id="answerBox" data-dismissible="false" data-position-to="window" data-overlay-theme="b">
+			<div data-role="popup" data-theme="c" id="answerBox" data-dismissible="false" data-position-to="window">
 				<div data-theme="c" data-role="header">
 					<h1>
 						Confirmation
