--- a/index.safe.html
+++ b/index.safe.html
@@ -613,7 +613,7 @@
 						else alert('LA DATE DU RDV EST PASSEE !!');
 					}
 					else {
-						checkZip('#map_page_open');
+						checkZip('#map_page');
 					}
 				}
 				else {
@@ -890,7 +890,6 @@
 		}
 		else {
 			//navigator.notification.alert('No Zip Code Here !!');
-			$("#setZipBtn").attr("title", pageToGo); // Remembering pageToGo for setZip function, changing onClick attr is bad practice.
 			$( "#setZip" ).popup( "open", { positionTo: "window" } );
 			$('#search').prop('disabled', false).removeClass('ui-disabled'); // Button is back
 		}
@@ -906,17 +905,16 @@
 			booking();
 		}
 		else {
-			var pageToGo = $("#setZipBtn").attr("title");
-			$.mobile.pageContainer.pagecontainer("change", pageToGo, { transition: "slide", reverse: true} );
+			$.mobile.pageContainer.pagecontainer("change", "#map_page", { transition: "slide", reverse: true} );
 		}
 	}
-	$('#map_page_open').live('pagecreate', function() {
+	$('#map_page').live('pagecreate', function() {
 		/*
         endcourse = setTimeout( function () {
             $("#cancel").trigger('click');
         }, 180000);
 		*/
-		$('#map_open').gmap({'center': mobileMap.center, 'zoom': mobileMap.zoom, 'disableDefaultUI':false, 'mapTypeId': google.maps.MapTypeId.ROADMAP, 'callback': function() {
+		$('#map').gmap({'center': mobileMap.center, 'zoom': mobileMap.zoom, 'disableDefaultUI':false, 'mapTypeId': google.maps.MapTypeId.ROADMAP, 'callback': function() {
 			var self = this;
 			var geocoder = new google.maps.Geocoder();
 			var  address = $('#addressInput').val();
@@ -939,7 +937,7 @@
 					}
 					//self.refresh();
 					wait4Me = setTimeout( function () {
-						searchLocationsNearOpen(myPlace, self);
+						searchLocationsNear(myPlace, self);
 						//$.mobile.loading( "hide" );
 					}, 2000);
 					
@@ -961,7 +959,7 @@
 						'clickable': false 
 					});
 					
-					//searchLocationsNearOpen(myPlace, self);
+					//searchLocationsNear(myPlace, self);
 				} else {
 					if(app) navigator.notification.alert(address + ' NON TROUVEE ');
 					else alert(address + ' NON TROUVEE ');
@@ -993,14 +991,14 @@
         });
 	});
 	
-	$('#map_page_open').live('pageshow', function() {
+	$('#map_page').live('pageshow', function() {
 		//demo.add('basic_map', function() { $('#map').gmap('refresh'); }).load('basic_map');
 		//$('#map').gmap("option", "center", mobileMap.center);
-		$('#map_open').gmap('refresh');
+		$('#map').gmap('refresh');
 	});
 	////////////////////////////////////////////////////////////
 	
-	function followOpenCab(ftaxi, fidcourse, fdep, ftel, frdv, ftable)
+	function followCab(ftaxi, fidcourse, fdep, ftel, frdv, ftable)
 	{
 		$.sessionStorage.setItem('ftaxi', ftaxi);
 		$.sessionStorage.setItem('fidcourse', fidcourse);
@@ -1008,16 +1006,16 @@
 		$.sessionStorage.setItem('ftel', ftel);
 		$.sessionStorage.setItem('frdv', frdv);
 		$.sessionStorage.setItem('ftable', ftable);
-		$.mobile.pageContainer.pagecontainer("change", "#follow_open", { transition: "slide"} );
+		$.mobile.pageContainer.pagecontainer("change", "#follow", { transition: "slide"} );
 	}
-	$('#follow_open').live('pagecreate', function() {
+	$('#follow').live('pagecreate', function() {
 		var ftaxi = $.sessionStorage.getItem('ftaxi');
 		var fidcourse = $.sessionStorage.getItem('fidcourse');
 		var fdep = $.sessionStorage.getItem('fdep');
 		var ftel = $.sessionStorage.getItem('ftel');
 		var frdv = $.sessionStorage.getItem('frdv');
 		var ftable = $.sessionStorage.getItem('ftable');
-		$('#follow_map_open').gmap({'center': mobileMap.center, 'zoom': mobileMap.zoom, 'disableDefaultUI':true, 'mapTypeId': google.maps.MapTypeId.ROADMAP, 'callback': function() {
+		$('#follow_map').gmap({'center': mobileMap.center, 'zoom': mobileMap.zoom, 'disableDefaultUI':true, 'mapTypeId': google.maps.MapTypeId.ROADMAP, 'callback': function() {
 			var self = this;
 			navigator.geolocation.getCurrentPosition(function(position, status) {
 				var latlng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude)
@@ -1055,7 +1053,7 @@
 					else alert('ADRESSE RDV : '+address+' NON TROUVEE ');
 				}
 			});
-			$.post('https://www.mytaxiserver.com/appserver/open_follow.php', { taxi: ftaxi, idcourse: fidcourse, dep: fdep, tel: ftel, table: ftable }, function(data){
+			$.post('https://www.mytaxiserver.com/appserver/follow.php', { taxi: ftaxi, idcourse: fidcourse, dep: fdep, tel: ftel, table: ftable }, function(data){
 				if(data.ok) {
 					var latlng = new google.maps.LatLng(data.lat, data.lng);
 					var display_name = 'Taxi ' + data.name;
@@ -1073,7 +1071,7 @@
 				}
 			}, "json");
 			var track = setInterval( function () {
-				$.post('https://www.mytaxiserver.com/appserver/open_follow.php', { taxi: ftaxi, idcourse: fidcourse, dep: fdep, tel: ftel, table: ftable }, function(data){
+				$.post('https://www.mytaxiserver.com/appserver/follow.php', { taxi: ftaxi, idcourse: fidcourse, dep: fdep, tel: ftel, table: ftable }, function(data){
 					var markerCab = self.get('markers')['cab'];
 					markerCab.setVisible(false);
 					var latlng = new google.maps.LatLng(data.lat, data.lng);
@@ -1098,15 +1096,15 @@
 		}});
 	});
 	
-	$('#follow_open').live('pageshow', function() {
-		$('#follow_map_open').gmap('refresh');
+	$('#follow').live('pageshow', function() {
+		$('#follow_map').gmap('refresh');
 	});
 	////////////////////////////////////////////////////////////
 	
-	function searchLocationsNearOpen(center, mapEvent) {
+	function searchLocationsNear(center, mapEvent) {
 		//clearLocations();
-		//navigator.notification.alert('In searchLocationsNearOpen');
-		$('#map_open').gmap('refresh');
+		//navigator.notification.alert('In searchLocationsNear');
+		$('#map').gmap('refresh');
 		var myDate = new Date();
 		idcourse = myDate.getTime();
 		//$('#dblinks').append($('<input id="idcourse" type="hidden" value="' + idcourse + '"/>'));
@@ -1194,15 +1192,15 @@
 				url = url.replace(/(?:\r\n|\r|\n)/g, '<br/>'); // Replaces line breaks by <br/>
 				mapEvent.addMarker({ id: i ,'position': latlng, 'bounds': true, 'title': name, 'icon': cabIcon }).click(function() {
 					infoCont = '<div id="infoCont"><p style="color:#333;"><b>' + name + ' est &agrave; ' + parseFloat(distance).toFixed(1) + ' Km de vous, infos: ' + address+ '</b></p></div>';
-					callBtn='<button class="ui-btn ui-corner-all ui-shadow ui-btn-c ui-btn-icon-left ui-icon-check cabs" id="' + i + '" onClick="sendJobOpen(\''+ url +'\')">Choisir</button>';
+					callBtn='<button class="ui-btn ui-corner-all ui-shadow ui-btn-c ui-btn-icon-left ui-icon-check cabs" id="' + i + '" onClick="sendJob(\''+ url +'\')">Choisir</button>';
 					//mapEvent.openInfoWindow({ 'content':  infoCont}, this);
 					mapEvent.openInfoWindow({ 'content':  infoCont+callBtn}, this);
 				});
 				//mapEvent.addBounds(latlng);
 				//$.post("https://www.mytaxiserver.com/appserver/diary_app_share.php", url, function(data) {});
-				//$('#dblinks').append($('<input class="cabs" id="' + i + '" type="hidden" onclick="sendJobOpen(\''+ url +'\')" />'));
-				$('#dblinks').append($('<button class="ui-btn ui-corner-all ui-shadow ui-btn-c ui-btn-icon-left ui-icon-check cabs" id="' + i + '" onClick="sendJobOpen(\''+ url +'\')">Choisir</button>'));
-				//$('#infoCont').append($('<button class="ui-btn ui-corner-all ui-shadow ui-btn-c ui-btn-icon-left ui-icon-check cabs" id="' + i + '" onClick="sendJobOpen(\''+ url +'\')">Choisir</button>'));
+				//$('#dblinks').append($('<input class="cabs" id="' + i + '" type="hidden" onclick="sendJob(\''+ url +'\')" />'));
+				$('#dblinks').append($('<button class="ui-btn ui-corner-all ui-shadow ui-btn-c ui-btn-icon-left ui-icon-check cabs" id="' + i + '" onClick="sendJob(\''+ url +'\')">Choisir</button>'));
+				//$('#infoCont').append($('<button class="ui-btn ui-corner-all ui-shadow ui-btn-c ui-btn-icon-left ui-icon-check cabs" id="' + i + '" onClick="sendJob(\''+ url +'\')">Choisir</button>'));
 			});
 			//num_req = num_req+1;
 			//i = parseInt(i,10)+1;
@@ -1211,7 +1209,7 @@
 			//url = url.replace(/'/g, "&rsquo;");
 			//url = url.replace(/(?:\r\n|\r|\n)/g, '<br/>'); // Replaces line breaks by <br/>
 			// Sends Auction Request to TaxiMedia appserver
-			//$('#dblinks').append($('<input class="cabs" id="' + i + '" type="hidden" onclick="sendJobOpen(\''+ url +'\')" />'));
+			//$('#dblinks').append($('<input class="cabs" id="' + i + '" type="hidden" onclick="sendJob(\''+ url +'\')" />'));
 			//$.post("https://www.mytaxiserver.com/appserver/diary_app_share.php", url, function(data) {});
 		}, "xml").done(function() { $.mobile.loading( "hide" ); });
 		//$.mobile.loading( "hide" );
@@ -1234,24 +1232,24 @@
         }, 2000);
     }
 	
-    function sendJobOpen(url)
+    function sendJob(url)
     {
 		$.mobile.loading( "show" );
 		$('.cabs').prop('disabled', true).addClass('ui-disabled'); // Prevents from multitap
 		$('.confButtons').hide('fast');
 		$('.whatNext').hide('fast');
-		$('#answer').empty().append('<p><b>Veuillez patienter pendant que nous traitons votre demande aupr&egrave;s du chauffeur ...<button type="button" class="cancel ui-btn ui-btn-b ui-shadow ui-corner-all ui-btn-icon-left ui-icon-delete" id="cancel" onClick="stopCallOpen()" value=""> Retour / Annulation </button></b></p>');
+		$('#answer').empty().append('<p><b>Veuillez patienter pendant que nous traitons votre demande aupr&egrave;s du chauffeur ...<button type="button" class="cancel ui-btn ui-btn-b ui-shadow ui-corner-all ui-btn-icon-left ui-icon-delete" id="cancel" onClick="stopCall()" value=""> Retour / Annulation </button></b></p>');
 		$.post("http://www.mytaxiserver.com/appserver/open_diary_app_share.php", url, function(data) {
 			hail_id = data.hail_id;
 			//taxi_phone_number = data.taxi_phone_number;
 		}, "json").done(function() { 
-			setTimeout('check_answer_open()', 500);
-			//check_answer_open();
+			setTimeout('check_answer()', 500);
+			//check_answer();
 			$.mobile.loading( "hide" );
 		}).fail(function() { alert('Erreur !') });
     }
 	
-    function check_answer_open()
+    function check_answer()
     {
 		//dep = $.sessionStorage.getItem('dep');
 		if(answerBoxPoped==0) {
@@ -1266,7 +1264,7 @@
 				//cancel(idcourse);
 				//document.getElementById('stop').value = 1;
 				//var box = navigator.notification.alert(data);
-				//stopCallOpen();
+				//stopCall();
 				//var box = navigator.notification.alert(data);
 				//$('#thanksResults').empty().append(data);
 				$('#answer').empty().append(data);
@@ -1286,11 +1284,11 @@
 				//return false;
 			}
 		}).always(function(data) {
-			setTimeout('check_answer_open()', 2000);
+			setTimeout('check_answer()', 2000);
 		});
     }
 
-    function cancelOpen(idcourse)
+    function cancel(idcourse)
     {
 		//navigator.notification.alert(idcourse);
 		dep = $.sessionStorage.getItem('dep');
@@ -1298,15 +1296,14 @@
 			$.post("https://www.mytaxiserver.com/appserver/open_diary.php?hail_id=" + hail_id + "&ack=1&db=1&cab_wont=1&del=1&status=declined_by_customer"); 
 		}
     }        
-	function stopCallOpen()
+	function stopCall()
 	{
 		//$.mobile.loading( "show" );
 		$('#dblinks').empty();
 		//clearInterval(time);
 		//clearTimeout(endcourse);
-		cancelOpen(idcourse);
+		cancel(idcourse);
 		$('#map').gmap('destroy');
-		$('#map_open').gmap('destroy');
 		$( "#backPop" ).popup( "open", { positionTo: "window" } );
 		var wait2getBack = setTimeout( function () {
 			document.location.href='index.html';
@@ -1320,7 +1317,7 @@
 		//clearTimeout(endcourse);
 		idcourse=''; // reset idcourse
 		//$('#map').gmap('destroy');
-		//$('#follow_map_open').gmap('destroy');
+		//$('#follow_map').gmap('destroy');
         document.location.href=flag;
 		//$.mobile.pageContainer.pagecontainer("change", "#infos", { transition: "slide"} );
     }
@@ -1354,7 +1351,7 @@
     }
     function processMap()
     {
-        $.mobile.pageContainer.pagecontainer("change", "#map_page_open", { transition: "slide"} );
+        $.mobile.pageContainer.pagecontainer("change", "#map_page", { transition: "slide"} );
     }
     </script>
     </head>
@@ -1459,7 +1456,7 @@
                 <input type="hidden" id="radiusSelect" value="100" />
                 <p>&nbsp;</p>
                 <div id="next-box"><button id="next" class="ui-btn ui-btn-b ui-shadow ui-corner-all ui-btn-icon-left ui-icon-next">* Champs obligatoires</button></div>
-                <div id="search-box"><button onClick="checkZip('#map_page_open')" class="ui-btn ui-btn-c ui-shadow ui-corner-all ui-btn-icon-left ui-icon-search" id="search">Commander un taxi</button></div>
+                <div id="search-box"><button onClick="checkZip('#map_page')" class="ui-btn ui-btn-c ui-shadow ui-corner-all ui-btn-icon-left ui-icon-search" id="search">Commander un taxi</button></div>
                 <div id="book-box"><button onClick="booking()" class="ui-btn ui-btn-c ui-shadow ui-corner-all ui-btn-icon-left ui-icon-clock" id="booking">R&eacute;server un taxi</button></div>
                 <div data-role="popup" data-theme="c" id="errorPop" data-dismissible="true">
 					<a href="#infos" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-icon-delete ui-btn-icon-notext ui-btn-right">Fermer</a>
@@ -1495,15 +1492,15 @@
                             Veuillez saisir le code postal de la commune o&ugrave; vous vous trouvez :
                             <input type="tel" id="zipDep" data-clear-btn="true" size="5"/>
                         </p>
-                        <button class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-left ui-icon-check" id="setZipBtn" title="" onClick="setZip()">Envoyer</button>
+                        <button class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-left ui-icon-check" onClick="setZip()">Envoyer</button>
                     </div>
                 </div>
             </div>
             </center>
         </div>
     </div>
-    <div data-role="page" data-theme="c" id="map_page_open">
-        <div class="ui-content" role="main" id="map_open">
+    <div data-role="page" data-theme="c" id="map_page"">
+        <div class="ui-content" role="main" id="map">
 			<div data-role="popup" data-theme="c" id="answerBox" data-dismissible="false" data-position-to="window" data-overlay-theme="b">
 				<div data-theme="c" data-role="header">
 					<h1>
@@ -1533,7 +1530,7 @@
 				</div>
 			</div>
         </div>
-        <div data-role="footer" id="footer_map_open" data-position="fixed" data-fullscreen="true">
+        <div data-role="footer" id="footer_map" data-position="fixed" data-fullscreen="true">
 			<div id="deliv-hide" style="width: 0px; height: 0px; visibility:hidden;">
 				<input type="button" onClick="" id="deliver" value="" />
 			</div>
@@ -1542,7 +1539,7 @@
 				</div>
 			</div>
 			<p>Veuillez S&eacute;lectionner un des taxis ci-dessus et le choisir
-			<button type="button" class="cancel ui-btn ui-btn-b ui-shadow ui-corner-all ui-btn-icon-left ui-icon-delete" id="cancel" onClick="stopCallOpen()" value=""> Retour / Annulation </button></p>
+			<button type="button" class="cancel ui-btn ui-btn-b ui-shadow ui-corner-all ui-btn-icon-left ui-icon-delete" id="cancel" onClick="stopCall()" value=""> Retour / Annulation </button></p>
         </div>
     </div>
     <div data-role="page" data-theme="c" id="connect">
@@ -1686,13 +1683,13 @@
             </div>
         </div>
     </div>
-    <div data-role="page" data-theme="c" id="follow_open">
+    <div data-role="page" data-theme="c" id="follow">
         <div data-role="header" data-fullscreen="true">
             <button onClick="goback('index.html')" class="ui-btn ui-btn-icon-left ui-corner-all ui-shadow ui-icon-power"><p style="font-size:16px"><b>Arr&ecirc;ter</b></p></button>
         </div>
-        <div class="ui-content" id="follow_map_open" role="main">
+        <div class="ui-content" id="follow_map" role="main">
         </div>
-        <div data-role="footer" id="footer_map_open" data-position="fixed" data-fullscreen="true">
+        <div data-role="footer" id="footer_map" data-position="fixed" data-fullscreen="true">
             <center><p><strong>
             	Vous ne pouvez suivre un taxi que 30 minutes avant le RDV.<br>
                 Les positions sont actualis&eacute;es toutes les 30 secondes.
